<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar_normal"
        android:id="@+id/toolbar_invoiceTest"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <!--头部-->
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_invoice_scan"
                android:layout_marginRight="40dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/btn_height"
                android:background="@color/btn_color"
                android:elevation="@dimen/elevation"
                android:text="@string/btn_scan"
                android:textColor="@color/white"
                android:gravity="center"/>
            <Button
                android:id="@+id/btn_invoice_edit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/btn_height"
                android:background="@color/btn_color"
                android:elevation="@dimen/elevation"
                android:text="@string/btn_edit"
                android:textColor="@color/white"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/ll_invoiceEdit">
            <EditText
                android:id="@+id/ed_invoice_code1"
                android:layout_marginRight="20dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/ed_height"
                android:hint="@string/hint_invoiceCode"/>
            <EditText
                android:id="@+id/ed_invoice_code2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/ed_height" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--信息体-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_border"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height"
                        android:gravity="center"
                        android:text="@string/app_name"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height"
                        android:paddingLeft="20dp"
                        android:gravity="left|center_vertical"
                        android:text="单位信息"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height"
                        android:paddingLeft="20dp"
                        android:gravity="left|center_vertical"
                        android:text="其他信息"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_height"
                        android:paddingLeft="20dp"
                        android:gravity="left|center_vertical"
                        android:text="各种信息"/>
                </LinearLayout>
                <Button
                    android:id="@+id/btn_invoiceSave"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/btn_color"
                    android:textColor="@color/white"
                    android:text="@string/btn_submit"/>
            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</LinearLayout>