<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar_normal"
        android:id="@+id/toolbar_aboutUS"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_little"
        android:orientation="vertical">

        <com.youth.banner.Banner
            android:id="@+id/banner_aboutUS"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:paddingLeft="10dp"
                android:background="@drawable/tv_head_border"
                android:text="@string/title_introduce"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"/>
            <TextView
                android:id="@+id/tv_aboutUS_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:padding="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:paddingLeft="10dp"
                android:background="@drawable/tv_head_border"
                android:text="@string/title_business"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"/>
            <TextView
                android:id="@+id/tv_aboutUS_business"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:padding="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:paddingLeft="10dp"
                android:background="@drawable/tv_head_border"
                android:text="@string/title_phone"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"/>
            <TextView
                android:id="@+id/tv_aboutUS_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:padding="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:paddingLeft="10dp"
                android:background="@drawable/tv_head_border"
                android:text="@string/title_address"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="left|center_vertical"/>
            <TextView
                android:id="@+id/tv_aboutUS_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:padding="10dp" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>